# erebor

./: .gitignore  PROJECT.md  SCHEMA.md  start.ps1
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: basemap.py  export.py  gunbarrel.py  health.py  highgrade.py  layers.py  production.py  select.py  tiles.py
backend/app/exports/: data.py  xlsx_builder.py
backend/tests/: test_money_eur.py  test_xlsx_export.py
docs/discovery/: check_curated.py  check_db.py  check_export.py  check_forecast.py  check_formations.py  check_irr.py  check_joins.py  check_load.py  inspect_dbf.py  inspect_tabular.py  probe_forecast.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  MapView.tsx  index.css  store.ts
frontend/src/api/: export.ts  gunbarrel.ts  highgrade.ts  production.ts  recon.ts  select.ts
frontend/src/map/: drawing.ts  formations.ts  highgradeColors.ts  sticksLayers.ts
frontend/src/panels/: BottomPanel.tsx  ChipGroup.tsx  Controls.tsx  GunbarrelView.tsx  HighgradeGunbarrelModal.tsx  HighgradeLegend.tsx  HighgradePanel.tsx  Legend.tsx  LineChart.tsx  ProductionPanel.tsx  ResultsPanel.tsx  TabSwitcher.tsx
