[project]
name = "erebor-backend"
version = "0.1.0"
description = "erebor — Novi Intelligence deal-valuation app backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.34",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "openpyxl>=3.1",
    # Shapefile deal-upload endpoint (app/api/select.py): pyshp parses the .shp,
    # pyproj reprojects from the .prj to EPSG:4326. Runtime deps — a fresh
    # install without them ImportErrors the whole API (CI caught this).
    "pyshp>=2.3",
    "pyproj>=3.5",
    # Shared decline-curve math (Phase 4); installed editable from the monorepo.
    "decline",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
